flat keys work, debugging minor keys